# armoire

./: .gitignore  Cargo.toml  README  build.rs
src/: credential.rs  lib.rs  passwords.rs  secrets.rs
src/secrets/: linux.rs  macos.rs  windows.rs
