[package]
name = "armoire"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "A cross-platform library for working with desktop secrets."
keywords = ["password", "credentials", "keychain", "secrets", "security"]
categories = ["authentication", "cryptography"]

[dependencies]
bitflags = "2.13"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Security_Credentials"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = "0.3"
objc2-security = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.22"
glib = "0.22"
libsecret = "0.9"